# .io.com.br

./: README.md
rolox_all_20260425_210235/: AddFriendForm.cs  AdminForm.cs  AgeProfileService.cs  AgeSelectorForm.cs  AgeService.cs  ApiService.cs  AvatarEditorForm.cs  BuilderForm.cs  CMakeLists.txt  ChatAvatarControl.cs  ChatMessage.cs  ChatMessageControl.cs  ChatModerationService.cs  CommunitiesForm.cs  CreateForm.cs  ExtensionService.cs  FriendEditor.csproj  GamePage.cs  GitHubTokenGen.csproj  InventoryForm.cs  KidsCord.csproj  LoginForm.cs  ME LEIA KIRO.txt  MainForm.cs  MainFormKid.cs  MarketplaceForm.cs  MessagesForm.cs  ModerationService.cs  NotificationsForm.cs  OAuth2Config.json  P2PServerService.cs  PEBuilder.cs  PeReader.cs  PlayerProfilePage.cs  PremiumForm.cs  Program.cs  ProtocolService.cs  RegisterForm.cs  RobloxApiService.cs  RobloxGame.cs  (+28 more)
